--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -15,6 +15,7 @@
   text-align: center;
   font-family: "Bebas Neue";
   letter-spacing: 5px;
+  animation: fadeIn 0.6s ease forwards;
 }
 
 .form-container {
@@ -128,3 +129,21 @@
   max-width: 100%; 
   white-space: nowrap;
 }
+
+.form-container, .thank-you-message {
+  animation: fadeIn 0.6s ease forwards;
+}
+
+/* Animasi fade in */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
