--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -6,7 +6,7 @@ nav {
     top: 0;
     background: linear-gradient(to bottom, 
         rgba(0, 0, 0, 1) 0%, 
-        rgba(0, 0, 0, 0.8) 50%, 
+        rgba(0, 0, 0, 1) 50%, 
         rgba(0, 0, 0, 0) 100%
     );
     z-index: 300;
@@ -55,4 +55,65 @@ nav ul li a {
 
 nav ul li a:hover {
     color: #37B7C3;
+}
+
+/* Hide hamburger icon by default */
+.hamburger {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  gap: 5px;
+  margin-left: auto;
+}
+
+.hamburger div {
+  width: 25px;
+  height: 3px;
+  background-color: white;
+  border-radius: 2px;
+  transition: all 0.3s ease;
+}
+
+/* Responsive: di bawah 900px */
+@media (max-width: 1180px) {
+  nav .nav-content {
+    padding: 0 15px;
+  }
+
+  .logo {
+    margin-right: 0;
+    font-size: 18px;
+  }
+
+  nav ul {
+    position: fixed;
+    top: 48px; /* tinggi nav */
+    right: 0;
+    background: linear-gradient(to left, 
+        rgba(0, 0, 0, 1) 0%, 
+        rgba(0, 0, 0, 1) 70%, 
+        rgba(0, 0, 0, 0) 100%
+    );
+    flex-direction: column;
+    width: 200px;
+    height: calc(100vh - 60px);
+    padding-top: 20px;
+    gap: 20px;
+    transform: translateX(100%);
+    transition: transform 0.3s ease;
+    z-index: 400;
+    align-items: center;
+  }
+
+  nav ul.open {
+    transform: translateX(0);
+  }
+
+  nav ul li a {
+    font-size: 18px;
+  }
+
+  .hamburger {
+    display: flex;
+  }
 }
