--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -8,23 +8,25 @@
   letter-spacing: 5px;
   animation: fadeIn 0.6s ease forwards;
 }
-
+.gallery-wrapper{
+  max-width: 1180px;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+}
 .gallery-container {
-  column-count: 3; /* jumlah kolom */
-  column-gap: 1rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 2rem;
 }
 
 .gallery-container img {
   width: 100%;
-  margin-bottom: 1rem;
-  border-radius: 10px;
-  break-inside: avoid;
+  height: 320px; 
   object-fit: cover;
+  border-radius: 10px;
   cursor: pointer;
   transition: transform 0.3s ease;
-  opacity: 0;
-  transform: translateY(20px);
-  animation: fadeUp 0.6s ease-out forwards;
 }
 
 .gallery-container img:hover {
@@ -103,10 +105,10 @@
     transform: translateY(0);
   }
 }
-/* Responsive untuk tablet dan layar sedang */
+
 @media (max-width: 1180px) {
   .gallery-container {
-    column-count: 2; /* kolom dikurangi jadi 2 */
+    column-count: 2; 
     column-gap: 0.8rem;
   }
 
@@ -117,10 +119,9 @@
   }
 }
 
-/* Responsive untuk HP / layar kecil */
 @media (max-width: 680px) {
   .gallery-container {
-    column-count: 1; /* 1 kolom, jadi gambar vertikal */
+    column-count: 1; 
     column-gap: 0;
   }
 
