--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -81,17 +81,17 @@
 .star-icon {
   width: 36px;
   height: 36px;
-  fill: #ccc; /* Default grey */
+  fill: grey; 
   transition: fill 0.3s ease;
   cursor: pointer;
 }
 
 .star-icon.filled {
-  fill: #088395; /* Biru saat diklik atau dihover */
+  fill: #088395; 
 }
 
 .submit-button {
-  background-color: #12b8bb; /* Hijau kebiruan */
+  background-color: #37B7C3; 
   color: white;
   border: none;
   padding: 12px 30px;
@@ -110,17 +110,17 @@
 }
 
 .thank-you-message {
-  background-color: #0e1f4b;
+  background-color: rgba(0, 0, 0, 0.25);
   padding: 30px;
   border-radius: 20px;
   width: 100%;
   max-width: 600px;
-  text-align: center; /* Tengahkan teks */
+  text-align: center; 
   color: white;
 }
 
 .thank-you-message h2 {
-  color: #12b8bb;
+  color: #37B7C3;
   margin-bottom: 15px;
 }
 
@@ -134,16 +134,5 @@
   animation: fadeIn 0.6s ease forwards;
 }
 
-/* Animasi fade in */
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
 
 
