--- a/src/components/Information/Information.css
+++ b/src/components/Information/Information.css
@@ -7,7 +7,7 @@
   border-radius: 20px;
   padding: 32px 64px;
   opacity: 0;
-  animation: fadeSlideUp 0.6s ease-out forwards;
+  animation: fadeIn 0.6s ease-out forwards;
   animation-delay: 1s;
 }
 
@@ -35,7 +35,7 @@
 .card-group {
   display: flex;
   flex-direction: column;
-  background-color: rgba(55, 183, 195, 0.2);
+  background-color: rgba(255, 255, 255, 0.05);
   border-radius: 20px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
   border: 1px solid #37B7C3;
@@ -43,7 +43,7 @@
   opacity: 1;
   transform: translateY(20px);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  animation: fadeSlideUp 0.6s ease-out forwards;
+  animation: fadeIn 0.6s ease-out forwards;
 }
 
 .card-group:hover {
@@ -72,7 +72,6 @@
     transform: translateX(0);
   }
 }
-
 
 .important-info p {
   font-size: 16px;
@@ -177,12 +176,5 @@
   
   .important-title {
     font-size: 18px;
-  }
-}
-
-@keyframes fadeSlideUp {
-  to {
-    opacity: 1;
-    transform: translateY(0);
   }
 }
