--- a/src/components/Facility/Facility.css
+++ b/src/components/Facility/Facility.css
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: center;
   min-height: 100vh;
-  padding: 20px;
 }
 
 .facility-container {
@@ -11,11 +10,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  padding: px;
 }
 
 .facility-title {
-  margin-top: 70px;
+  margin-top: 100px;
   margin-bottom: 20px;
   font-size: 72px; 
   color: white;
